# python-tesseract

./: buildDeb  buildDeb_bad  buildall  changelog  cleanall  config.h.in  config.h.in~  config.py  config.status  configure  configure.in  configure.scan  control  debianRulesBackUp  fmemopen.c  fmemopen.h  include-binaries  main_dummy.cpp  main_dummy.h  makefile.shsh  readme.md  setup.cfg  setup.md  setup.py  setup.py~  stdeb.cfg  suricata-common.h  tesseractmain.cpp  test.py  testing
.pc/debian-changes-0.5-1/: setup.py
autom4te.cache/: output.0  requests  traces.0
debian/: changelog  control~  rules
debianPatches/: control  control.in  control.in~  control~  copyright  rules  rules4final
